--- a/index.html
+++ b/index.html
@@ -1,70 +1,21 @@
-<div style="max-width: 500px; margin: 0 auto;">
-    <div style="background-color: #fff; border: 1px solid #004445; border-radius: 12px;">
-        <div style="text-align: center; background-color: #004445; border-top-left-radius: 10px; border-top-right-radius: 10px; padding: 20px;">
-            <h2 style="color: #fff; margin: 0;">INVOICE</h2>
-        </div>
+<html>
 
-        <div style="padding: 15px;">
-            <div style="border: 1px solid #ddd; border-radius: 8px; padding: 10px; margin-bottom: 10px;">
-                <b style="font-weight: bold;">Invoice No:</b> INV-01167<br>
-                <b style="font-weight: bold;">Date:</b>  26 March 2024<br>
-            </div>
+<head>
+  <meta charset="utf-8">
+  <title>therushilsinha</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-            <div style="border: 1px solid #ddd; border-radius: 8px; padding: 10px; margin-bottom: 10px;">
-                <b style="font-weight: bold;">Bill To:</b><br>
-                DMart<br>
-                606, 80 Feet Rd, Koramangala 4th Block<br>
-                +91 98765 43210<br>
-            </div>
+<body>
 
-            <div style="border: 1px solid #ddd; border-radius: 8px; padding: 10px; margin-bottom: 10px;">
-                <b style="font-weight: bold;">Status:</b>
-                Submitted<br>
-            </div>
-
-            <div style="border: 1px solid #ddd; border-radius: 8px; padding: 10px; margin-bottom: 10px;">
-                <style>
-    table {
-        border-collapse: collapse;
-        width: 100%;
-        border: 1px solid #004445;
-        border-radius: 12px;
-    }
-
-    table th, table td {
-        padding: 8px;
-    }
-
-    table th {
-        background-color: #004445;
-        color: #fff;
-        text-align: left;
-    }
-
-    table tbody tr:nth-child(even) {
-        background-color: #EEEEEE;
-    }
-
-    table tbody tr:nth-child(odd) {
-        background-color: #FFFFFF;
-    }
-
-    table tbody td {
-        border: 1px solid #004445;
-    }
-
-    table tbody td:last-child {
-        text-align: right;
-    }
-</style>
-
-<table><thead><tr><th>Product</th><th>Quantity</th></tr></thead><tbody><tr><td>Safewash Liquid Detergent</td><td>2</td></tr><tr><td>Smart Wash Floor Cleaner</td><td>2</td></tr><tr><td>Easy Clean Toilet Cleaner</td><td>2</td></tr></tbody></table>
-            </div>
-          
-            <p style="margin-top: 20px;">
-                <b style="font-weight: bold;">Thank you for your business!</b><br>
-                <b><i style="font-style: italic;">Sale-o-matic Team</i></b>
-            </p>
-        </div>
+  <body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+    <div id="YakındaYazı">█ █ █ <span style="color:black">█ █ █ █ █ █ █ █ █ █ </span>69%
+      <br>&gt; 
+      Hello Visitor
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;<br>&gt; 
+      We're Coming Soon  <span id="imleç">█</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
-</div>
+  </body>
+
+</html>
